welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:1: error: Missing closing brace `}' assumed here
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
^sleepIn:10: error: Missing closing brace `}' assumed here
}
^