welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
	if(weekday){
		if(vacation == false) {
			return false ;
		}
	if(weekday == false){
		if(vacation) {
			return true ;
		}
}
